syntax = "proto3";

package shoppingCart;

option go_package = "./src/pb/shoppingcart";

message CreateCartRequest {
    int32 product_id = 1;
    int32 quantity = 2;
    double unit_price = 3;
}

message ShoppingCartTotal {
    int32 quantity_items = 1;
    double total_price = 2;
}

//
service ShoppingCartService {
    //
    rpc AddItem(stream CreateCartRequest) returns (stream ShoppingCartTotal);
}

